syntax = "proto3";

package auth;
option csharp_namespace = "AuthServer.Grpc";

import "google/protobuf/empty.proto";

message UserMessage {
  string id        = 1;
  string username  = 2;
  string email     = 3;
  bool   isActive  = 4;
  string roleName  = 5;
}

service LoginService {
  rpc Register    (RegisterRequest)       returns (AuthResponse);
  rpc Login       (LoginRequest)       returns (AuthResponse);
  rpc ListUsers   (google.protobuf.Empty) returns (ListUsersResponse);
}

message RegisterRequest  { 
    string username = 1;  
    string email = 2;
    string password = 3; 
    string firstName = 4;
    string lastName = 5;
}
message LoginRequest  { string username = 1;  string password = 2; }
message AuthResponse { bool success = 1; string userId = 2; string error = 3; }
message ListUsersResponse {
  repeated UserMessage users = 1;
}